@@ -1,6 +1,7 @@
 Revision history for Sys-Sendfile
 
 {{$NEXT}}
+          - Make count=0 write zero bytes
 
 0.16      2015-02-17 16:34:45+01:00 Europe/Amsterdam
           Moved PERL_VERSION_ATLEAST to after perl headers
